# actions

./: README.md  pyproject.toml
.github/workflows/: testing.yml
src/: main.py
tests/: test_dynamodb.py  test_example.py  test_example_1.py
