[tool.poetry]
name = "actions"
version = "0.1.0"
description = ""
authors = ["john@example.com"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
boto3 = "^1.37.18"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
